fix z-index

--- a/client/src/components/Room.css
+++ b/client/src/components/Room.css
@@ -47,19 +47,13 @@
     text-shadow: 5px 5px 5px blue;
 }
 
-/* #battlefield {
-    height: 50%;
-    max-height: 50%
-} */
-
 #entry {
     position: relative;
     display: flex;
     flex-direction: column;
     bottom: 0px;
     width: 100%;
-    height: 20em;
-    max-height: 20em;
+    z-index: 2;
 }
 
 .textfill {
@@ -87,15 +81,10 @@
     width: 100%;
 }
 
-/* .avatar-wrapper {
-    overflow: hidden;
-} */
-
 .avatar {
     position: absolute;
-    width: 100%
-    /* width: 150%;
-    left: -15%; */
+    height: 200%;
+    z-index: 1;
 }
 
 #avatar-P1 {
